@@ -1,3 +1,7 @@
+Fri Oct 30 20:39:16 PST 1998 Manish Singh <yosh@gimp.org>
+
+	* esddsp.c: provide implementation for close() to expire sndfd
+
 1998-10-28  Yo Ric Dude  <ricdude@ix.netcom.com>
 
 	* esound.spec.in: reordered the changelog entries, as rpm likes to 
